Actualizada la documentación de PINF

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/CasosUso.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/CasosUso.tex
@@ -1,4 +1,7 @@
 \chapter{Diseño del sistema}
+%
+% Se supone que debería quitar los que se parecen para que quede más corto la cosa es saber cual quitar y cual dejar.
+%
 \section{Diseño de casos de uso}
 En el diseño del sistema se han propuesto una serie de casos de uso que tienen la siguiente precondición implícita para poder usar dichos casos de uso en la aplicación final:
 \begin{itemize}
