--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/Pruebas.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/Pruebas.tex
@@ -16,4 +16,4 @@ Aquí se narrarán las pruebas del sistema.
 \subsection{Pruebas no funcionales}
 
 
-\section{Pruebas de acpetación}
+\section{Pruebas de aceptación}
