--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Prolegomeno/Introduccion.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Prolegomeno/Introduccion.tex
@@ -13,7 +13,7 @@ Para cumplir con el objetivo general, tendremos que cubrir los siguientes puntos
 \begin{itemize}
 	\item Recursos de aprendizaje interactivos.
 	\item Es evaluable por un profesor.
-	\item Se pueden compartir historias entre usuarios.
+	\item Se pueden compartir fantasías entre usuarios.
 	\item Es simple y manejable por alumnos de primaria.
 	\item Fomenta las habilidades y enseñanzas STEM (science, technology, engeneering and maths).
 \end{itemize}
@@ -22,4 +22,15 @@ Para cumplir con el objetivo general, tendremos que cubrir los siguientes puntos
 Los alumnos podrán crear fantasías, compartirlas y podrán ser evaluadas por los profesores, que podrán mandar como tarea el hacer fantasías.
 
 \section{Organización del documento}
-Nada por ahora.
+Este documento está organizado en función de las especificaciones expuestas para la presentación de un trabajo de fin de grado siguiendo los siguientes apartados:
+\begin{enumerate}
+	\item Introducción.
+	\item Plan de proyecto.
+	\item Análisis de requisitos.
+	\item Diseño del sistema.
+	\item Implementación del sistema.
+	\item Pruebas del sistema.
+	\item Manual de usuario.
+	\item Manual de instalación.
+	\item Conclusiones.
+\end{enumerate}
