--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Prolegomeno/PlanProyecto.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Prolegomeno/PlanProyecto.tex
@@ -8,9 +8,10 @@ La metodología usada será \textbf{Scrum}: Método de desarrollo ágil caracter
 
 \section{Planificación del proyecto}
 El proyecto tendrá una duración de tres meses y se realizarán reuniones semanales con el cliente de una hora de duración como máximo.
+\newpage
 \begin{figure}[h]
 	\centering
-	\includegraphics[scale=0.42]{Gantt.png}
+	\includegraphics[scale=0.35]{Fantasy.png}
 	\caption{Diagrama de Gantt}
 	\label{Diagrama de Gantt}
 \end{figure}
@@ -88,10 +89,22 @@ El equipo ha decidido hacer reuniones con una periodicidad de una semana con el 
 	\item Creación de puntos activos con sus características básicas.
 \end{enumerate}
 
-\subsection{Sprint 5 (24 de abril al 1 de mayo)}
+\subsection{Sprint 5 (24 de abril al 3 de mayo)}
 \begin{enumerate}
 	\item Creación de puntos activos con todas sus características.
 	\item Inicio de la vista para poder jugar la fantasía.
+\end{enumerate}
+
+\subsection{Sprint 6 (3 de mayo al 8 de mayo)}
+\begin{enumerate}
+	\item Creación de los \textit{quiz} para los puntos activos.
+	\item Continuación de la vista para poder jugar la fantasía.
+\end{enumerate}
+
+\subsection{Sprint 7 (8 de mayo al 15 de mayo)}
+\begin{enumerate}
+	\item Finalización de los puntos activos con todas sus características especificadas.
+	\item Finalización de la vista para poder jugar la fantasía.
 \end{enumerate}
 
 
@@ -133,4 +146,21 @@ El equipo ha decidido hacer reuniones con una periodicidad de una semana con el 
 \begin{enumerate}
 	\item Finalización del sprint 4.
 	\item Comienzo del sprint 5.
+\end{enumerate}
+
+\subsection{Reunión 6 (3 de mayo)}
+\begin{enumerate}
+	\item Finalización del sprint 5.
+	\item Comienzo del sprint 6.
+\end{enumerate}
+
+\subsection{Reunión 7 (8 de mayo)}
+\begin{enumerate}
+	\item Finalización del sprint 6.
+	\item Comienzo del sprint 7.
+\end{enumerate}
+
+\subsection{Reunión 8 (15 de mayo)}
+\begin{enumerate}
+	\item Finalización del sprint 7.
 \end{enumerate}
