--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/UseCase.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/UseCase.tex
@@ -1,4 +1,4 @@
-\chapter{Use cases}
+\chapter{System design}
 \section{Design of use cases}
 All the use cases described below have the following implicit precondition to be able to use said use cases in the final application:
 \begin{itemize}
