--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/Introduction.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/Introduction.tex
@@ -13,7 +13,7 @@ To fulfill the general objective, we will have to cover the following points:
 \begin{itemize}
 	\item Interactive learning resources.
 	\item Can be evaluated by a teacher.
-	\item You can share stories between users.
+	\item You can share fantasies between users.
 	\item It is simple and manageable by primary school students.
 	\item Foster STEM skills and teachings (science, technology, engeneering and maths).
 \end{itemize}
@@ -22,4 +22,15 @@ To fulfill the general objective, we will have to cover the following points:
 The students will be able to create fantasies, share them and they will be able to be evaluated by the professors, who will be able to send as a task the making of fantasies.
 
 \section{Organization of the document}
-Nothing.
+This document is organized according to the specifications set out for the presentation of an end-of-degree project following the following sections:
+\begin{enumerate}
+	\item Introduction.
+	\item Project plan.
+	\item Analysis of requirements.
+	\item System design.
+	\item Implementation of the system.
+	\item System tests.
+	\item User manual.
+	\item Installation manual.
+	\item Conclusions.
+\end{enumerate}
