--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/ProyectPlan.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/ProyectPlan.tex
@@ -8,9 +8,10 @@ The methodology used will be \ textbf {Scrum}: Agile development method characte
 
 \section{Project planning}
 The project will last for three months and weekly meetings with the client will be held for a maximum of one hour.
+\newpage
 \begin{figure}[h]
 	\centering
-	\includegraphics[scale=0.42]{Gantt.png}
+	\includegraphics[scale=0.35]{Fantasy.png}
 	\caption{Gantt diagram}
 	\label{Gantt diagram}
 \end{figure}
