Actualizada y casi termianda la documentación de PINF

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/CasosUso.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/CasosUso.tex
@@ -861,10 +861,14 @@ Los casos de uso propuestos son los siguientes:
 %\end{itemize}
 
 \section{Diseño de la interfaz de usuario}
+El diseño de la interfaz de usuario usado en el proyecto Fantasy sigue las reglas de diseño de \href{https://stimey.eu/home}{Stimey} tanto en la vista de creación de la fantasía, como en la vista jugar dicha fantasía.
+
+Se ha llegado a un acuerdo con los integrantes del proyecto Stimey para que nos faciliten las reglas de estilo y poder hacer que se asemeje lo máximo posible, ya que la finalidad del proyecto, es integrarlo en su plataforma.
 
 \section{Diseño de datos}
+En cuanto al diseño de datos, hemos propuesto el siguiente diagrama para la base de datos del proyecto Fantasy:\\
 \textcolor{red}{DIAGRAMA DE LA BASE DE DATOS}
 
-\section{Diseño de componentes}
-
-\section{Parametrización del software base}
+%\section{Diseño de componentes}
+%
+%\section{Parametrización del software base}
