--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/Implementacion.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/Implementacion.tex
@@ -1,10 +1,13 @@
 \chapter{Implementación del sistema}
-Aquí se narrará la implementación del sistema.
-
 \section{Entorno tecnológico}
+El entorno tecnológico de programación usado en el proyecto Fantasy ha sido el framework \href{https://laravel.com/}{Laravel}, el cual tiene integración con PHP y MySQL.
 
+Gracias a PHP hemos conseguido que la página web del proyecto Fantasy sea lo más parecida a la de Stimey, para su posterior integración en la plataforma.
+
+Y, con MySQL, gestionamos la base de datos de las fantasías que realizan los alumnos y profesores, teniendo un control de la propiedad y acceso a las fantasías.
 
 \section{Código fuente}
-
+\textcolor{red}{SEGURO QUE QUEREMOS PONER ALGO AQUI?}
 
 \section{Calidad de código}
+\textcolor{red}{SEGURO QUE QUEREMOS PONER ALGO AQUI?}
