--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/Pruebas.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/Pruebas.tex
@@ -1,19 +1,18 @@
 \chapter{Pruebas del sistema}
-Aquí se narrarán las pruebas del sistema.
-
 \section{Pruebas unitarias}
-
+Para las pruebas unitarias hemos usado la herramienta de pruebas aportada por Laravel, la cual, permite programar pruebas unitarias que se ejecutarán automáticamente y nos darán un resultado directo de si ha pasado dicha prueba o no.
 
 \section{Pruebas de integración}
-
+Las pruebas de integración han sido testeadas mediante toda la duración del proyecto mientras se iban enlazando los distintos módulos de puntos activos y workspace en la plataforma.
 
 \section{Pruebas de sistema}
-
+Las pruebas de sistema se han realizado gracias a la herramienta de pruebas aportada por Laravel, que, al igual que las pruebas unitarias, han sido programadas para luego ser lanzadas automáticamente.
 
 \subsection{Pruebas funcionales}
-
+\textcolor{red}{SUPONGO QUE AQUÍ HABRÁ QUE PONER ALGÚN TIPO DE PRUEBA}
 
 \subsection{Pruebas no funcionales}
-
+\textcolor{red}{SUPONGO QUE AQUÍ HABRÁ QUE PONER ALGÚN TIPO DE PRUEBA}
 
 \section{Pruebas de aceptación}
+Las pruebas de aceptación se han ido haciendo con nuestra clienta/directora de este proyecto en cada una de las reuniones, en las que nos iba argumentando los cambios que quería y si aceptaba los cambios que le proponíamos o los rechazaba.
