--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Epilogo/Conclusiones.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Epilogo/Conclusiones.tex
@@ -1,7 +1,11 @@
 \chapter{Conclusiones}
-
 \section{Objetivos}
+Los objetivos del proyecto Fantasy es hacer que los alumnos aprendan de una forma más creativa y divertida mediante la creación de fantasías y de forma dinámica mediante la realización de dichas fantasías y sus correspondientes puntos activos.
 
 \section{Lecciones aprendidas}
+En cuanto a las lecciones aprendidas, todos los integrantes del grupo han trabajado duro en la realización del proyecto Fantasy dedicando muchas horas a la programación del proyecto. Esto nos ha hecho aprender que una buena organización inicial es fundamental a la hora de abarcar un proyecto de estas dimensiones y con un cliente del mundo laboral que se escapa del ámbito educativo al que estamos acostumbrados la mayoría de nosotros.
+
+Por ello, la gestión del tiempo y de la división de las tareas ha sido algo esencial en el avance de este proyecto.
 
 \section{Trabajo futuro}
+Como trabajo futuro quedaría la implementación de la aplicación web Fantasy en la plataforma de Stimey de modo que pertenezca a sus laboratorios y que sea usada por todos aquellos usuarios (tanto profesores como alumnos) que desean aprender sobre un tema en concreto, o usarlo en sus clases para enseñar a sus alumnos de un modo más interactivo, creativo y divertido.
