--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Epilogo/ManualInstalacionExplotacion.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Epilogo/ManualInstalacionExplotacion.tex
@@ -1,13 +1,26 @@
 \chapter{Manual de instalación y explotación}
-
 \section{Introducción}
+Debido a que el proyecto Fantasy no es una aplicación que se pueda instalar en un ordenador personal, sino que está desarrollada como una aplicación web, ésta, tendrá que ser instalada en un servidor.
 
 \section{Requisitos previos}
+Para instalar la aplicación en el servidor que va a alojarla, necesitaremos contar con el framework Laravel, PHP y MySQL. Una vez instalados dichos elementos, solo tendremos que lanzar la aplicación desde el directorio del proyecto.
 
 \section{Inventario de componentes}
+Los componentes necesarios para lanzar la aplicación Fantasy seran:
+\begin{itemize}
+	\item Framework Laravel.
+	\item PHP.
+	\item MySQL.
+	\item phpMyAdmin (opcional).
+\end{itemize}
 
 \section{Procedimientos de instalación}
+En la propia instalación de Laravel, ya estaremos instalando tanto PHP como MySQL. Para ello, solo tendremos que seguir el siguiente \href{https://styde.net/instalacion-de-composer-y-laravel/}{tutorial}.
 
-\section{Procedimientos de operación y nivel de servicio}
+%\section{Procedimientos de operación y nivel de servicio}
+
 
 \section{Pruebas de implantación}
+Las pruebas de implantación han sido comprobadas por el equipo de Fantasy personalmente comprobando las posibles configuraciones que podrían llevar a un error y han sido solventadas en su gran mayoría.
+
+Dichas pruebas han sido realizadas en los ordenadores portátiles de los integrantes del grupo de trabajo Fantasy encargados de este proyecto.
