Preparada la presentación de ACPD

--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Presentación/AWS vs Azure.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Presentación/AWS vs Azure.tex
@@ -1,4 +1,4 @@
-\documentclass[aspectratio=169]{beamer}
+\documentclass[aspectratio=1610]{beamer}
 
 %% Juego de caracteres usado en el archivo fuente: UTF-8
 \usepackage{ucs}
@@ -26,13 +26,13 @@
 %\usetheme{Copenhagen}
 %\usetheme{Darmstadt}
 %\usetheme{default}
-%\usetheme{Frankfurt}
+\usetheme{Frankfurt}
 %\usetheme{Goettingen}
 %\usetheme{Hannover}
 %\usetheme{Ilmenau}
 %\usetheme{JuanLesPins}
 %\usetheme{Luebeck}
-\usetheme{Madrid}
+%\usetheme{Madrid}
 %\usetheme{Malmoe}
 %\usetheme{Marburg}
 %\usetheme{Montpellier}
@@ -71,7 +71,7 @@ Sisic Dino}
 % - Use the \inst command only if there are several affiliations.
 % - Keep it simple, no one is interested in your street address.
 
-\date{25 de abril de 2019}
+%\date{25 de abril de 2019}
 % - Either use conference name or its abbreviation.
 % - Not really informative to the audience, more for people (including
 %   yourself) who are reading the slides online
@@ -117,18 +117,73 @@ Sisic Dino}
   \tableofcontents
 \end{frame}
 
-\section{AWS}
+\section{Introducción}
+\subsection{AWS}
 \begin{frame}{AWS}
 	contenidos...
 \end{frame}
 
-
-\section{Azure}
+\subsection{Azure}
 \begin{frame}{Azure}
 contenidos...
 \end{frame}
 
+\section{Características y limitaciones}
+\subsection{AWS}
+\subsubsection{Características de AWS}
+\begin{frame}{Características de AWS}
+contenidos...
+\end{frame}
 
+\subsubsection{Limitaciones de AWS}
+\begin{frame}{Limitaciones de AWS}
+	contenidos...
+\end{frame}
+
+\subsection{Azure}
+\subsubsection{Características de Azure}
+\begin{frame}{Características de Azure}
+contenidos...
+\end{frame}
+
+\subsubsection{Limitaciones de Azure}
+\begin{frame}{Limitaciones de Azure}
+contenidos...
+\end{frame}
+
+\section{Comparación de los servicios ofrecidos por AWS y Azure}
+\subsection{Creación de máquinas virtuales}
+\subsubsection{AWS}
+\begin{frame}{Creación de máquinas virtuales en AWS}
+	contenidos...
+\end{frame}
+
+\subsubsection{Azure}
+\begin{frame}{Creación de máquinas virtuales en Azure}
+	contenidos...
+\end{frame}
+
+\subsection{Creación de webs}
+\subsubsection{AWS}
+\begin{frame}{Creación de webs en AWS}
+	contenidos...
+\end{frame}
+
+\subsubsection{Azure}
+\begin{frame}{Creación de webs en Azure}
+	contenidos...
+\end{frame}
+
+\subsection{Creación de servicios IoT}
+\subsubsection{AWS}
+\begin{frame}{Creación de servicios IoT en AWS}
+	contenidos...
+\end{frame}
+
+\subsubsection{Azure}
+\begin{frame}{Creación de servicios IoT en Azure}
+	contenidos...
+\end{frame}
 \end{document}
 
 
