Modificada la documentación de ACPD

--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Introduccion/AWS.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Introduccion/AWS.tex
@@ -1,7 +1,7 @@
 \chapter{AWS}
 \hypertarget{AWS}{}
 \section{¿Qué es AWS?}
-Amazon Web Services, en adelante AWS, es una colección de servicios de computación en la nube pública, también llamados servicios web\footnote{Es una tecnología que utiliza un conjunto de protocolos y estándares que sirven para intercambiar datos entre aplicaciones.}.
+Amazon Web Services, en adelante AWS, es una colección de servicios de computación en la nube pública, también llamados servicios web\footnote{Es una tecnología que utiliza un conjunto de protocolos y estándares (como mensajería por XML) que sirven para intercambiar datos entre aplicaciones. No están vinculados a ningún sistema operativo, por lo que funcionan de forma independiente y simultánea. Los componentes de los servicios web son: SOAP, UDDI, WSDL, etc.}.
 
 Es usado en aplicaciones como Dorpbox o Foursquare. Es una de las ofertas internacionales más importantes de la computación en la nube y compite directamente con \hyperlink{azure}{Microsoft Azure} aunque AWS es considerado como pionero en este campo.
 
@@ -15,10 +15,12 @@ El primer servicio de AWS lanzado para el uso público era Simple Queue Service 
 Hoy en día, AWS proporciona una plataforma de infraestructura escalable, de confianza y de bajo costo en la nube que impula cientos de miles de negocios de 190 países de todo el mundo. Con centros de datos en Estados Unidos, Europa, Brasil, Singapur, Japón y Australia.
 
 \section{Descripción}
-Como ya se ha comentado anteriormente, AWS es una plataforma ideal para lanzar aplicaciones y proyectos de forma distribuida y escalable. Entre sus beneficios principales, podemos destacar las siguientes:
+Como ya se ha comentado anteriormente, AWS es una plataforma ideal para lanzar aplicaciones y proyectos de forma distribuida y escalable.
+
+Entre sus beneficios principales, podemos destacar las siguientes:
 \begin{itemize}
-	\item \textbf{Bajo costo:} AWS ofrece precios bajos por uso, sin gastos anticipados ni compromisos a largo plazo.
-	\item \textbf{Agilidad y elasticidad instantánea:} AWS proporciona una infraestructura global y masiva en la nube que permite experimentar e iterar con rapidez. Puede implementar nuevas aplicaciones y aumentar su escala en cuanto crezca su carga de trabajo, oi bien, reducirla en función de la demanda.
+	\item \textbf{Bajo costo:} AWS ofrece precios bajos por uso, sin gastos anticipados ni compromisos a largo plazo. Solo pagas por lo que usas.
+	\item \textbf{Agilidad y elasticidad instantánea:} AWS proporciona una infraestructura global y masiva en la nube que permite experimentar e iterar con rapidez. Puede implementar nuevas aplicaciones y aumentar su escala en cuanto crezca su carga de trabajo, o bien, reducirla en función de la demanda. Cuenta con redundancia y disponibilidad en todo momento.
 	\item \textbf{Accesibilidad y flexibilidad:} AWS es una plataforma independiente del lenguaje y del sistema operativo.
 	\item \textbf{Seguridad:} AWS es una plataforma tecnológica, segura y duradera que cuenta con certificaciones y auditorías reconocidas en el sector.
 \end{itemize}
